--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,16 +44,27 @@ a {
 }
 
 /* ======== Header ======== */
-.header {
+
+.fixed-header {
+    background: #e6f0ff;
+    padding-top: 26px;
+    position: sticky;
+    top: -26px;
+    z-index: 1;
+}
+
+.hero-wrap {
     position: relative;
-    background-color: #E6F0FF;
+    display: flex;
+    flex-direction: column;
+    background: #e6f0ff;
     height: 100vh;
 }
 
 .navbar {
     display: flex;
     align-items: center;
-    padding-top: 38px;
+    padding: 12px 0;
 }
 
 .navbar ul {
@@ -157,7 +168,19 @@ a {
 .clients .images {
     display: flex;
     justify-content: space-between;
-    margin-top: 96px;
+    margin-top: 70px;
+}
+
+.clients .images a {
+    display: flex;
+    align-items: center;
+    height: 90px;
+    padding: 0 42px;
+    border-radius: 12px;
+}
+
+.clients .images a:hover {
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
 }
 
 /* ======== Guides ======== */
@@ -613,7 +636,11 @@ a {
     width: 28px;
     height: 28px;
     border-radius: 3px;
-    background: #f3f3f3;
+    background: #f9f9f9;
+}
+
+.footer .social-link + .social-link {
+    margin-left: 16px;
 }
 
 .footer .social-link:hover {
