--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,11 @@
     --primary-color: #0F1B4C;
 }
 
+html, 
+.body {
+    scroll-behavior: smooth;
+}
+
 html {
     font-size: 62.5%;
 }
@@ -58,7 +63,7 @@ a {
     display: flex;
     flex-direction: column;
     background: #e6f0ff;
-    height: 100vh;
+    height: calc(100vh - 90px);
 }
 
 .navbar {
