--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,14 +58,6 @@ a {
     z-index: 1;
 }
 
-.hero-wrap {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    background: #e6f0ff;
-    height: calc(100vh - 90px);
-}
-
 .navbar {
     display: flex;
     align-items: center;
@@ -104,15 +96,20 @@ a {
     border-radius: 8px;
 }
 
-.hero {
-    margin-top: 130px;
+.hero-wrap {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: #e6f0ff;
+    height: calc(100vh - 90px);
 }
 
-.hero .info {
+.hero-wrap .info {
     width: 51%;
 }
 
-.hero .sub-title {
+.hero-wrap .sub-title {
     font-weight: 500;
     font-size: 1.8rem;
     line-height: 1.5;
@@ -120,7 +117,7 @@ a {
     color: #687690;
 }
 
-.hero .title {
+.hero-wrap .title {
     margin-top: 8px;
     font-weight: 700;
     font-size: 6.2rem;
@@ -128,7 +125,7 @@ a {
     color: #000336;
 }
 
-.hero .desc {
+.hero-wrap .desc {
     margin-top: 30px;
     font-weight: 400;
     font-size: 1.8rem;
