--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,10 @@
 }
 
 :root {
-    --primary-color: #0F1B4C;
+    --primary-color: #0f1b4c;
 }
 
-html, 
+html,
 .body {
     scroll-behavior: smooth;
 }
@@ -30,7 +30,7 @@ body {
     font-weight: 500;
     font-size: 1.4rem;
     text-align: center;
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .btn:hover {
@@ -76,7 +76,7 @@ a {
 .navbar ul a {
     font-weight: 500;
     font-size: 1.4rem;
-    color: #4F5361;
+    color: #4f5361;
     padding: 8px 14px;
 }
 
@@ -129,8 +129,8 @@ a {
     margin-top: 30px;
     font-weight: 400;
     font-size: 1.8rem;
-    line-height: 1.78; 
-    color: #5A6473; 
+    line-height: 1.78;
+    color: #5a6473;
 }
 
 .hero-cta {
@@ -160,7 +160,7 @@ a {
     font-weight: 500;
     font-size: 1.6rem;
     line-height: 1.25;
-    color: #7D8589;
+    color: #7d8589;
 }
 
 .clients .row-desc {
@@ -222,7 +222,7 @@ a {
     font-size: 1.6rem;
     line-height: 1.88;
     text-align: center;
-    color: #5A6473;
+    color: #5a6473;
 }
 
 .list-guide {
@@ -241,7 +241,7 @@ a {
     font-weight: 500;
     font-size: 2rem;
     line-height: 1.1;
-    color: #3B3C45;
+    color: #3b3c45;
 }
 
 .guide-item .link {
@@ -249,7 +249,7 @@ a {
     margin-top: 10px;
     font-weight: 600;
     font-size: 1.4rem;
-    color: #0689FF;
+    color: #0689ff;
 }
 
 .guide-item .arrow {
@@ -271,7 +271,7 @@ a {
 .featured {
     margin-top: 41px;
     padding: 110px 0;
-    background-color: #F5FAFE;
+    background-color: #f5fafe;
 }
 
 .featured .sub-title {
@@ -314,7 +314,7 @@ a {
 
 .featured .item {
     flex: 1;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     border-radius: 12px;
     /* overflow: hidden; */
 }
@@ -347,7 +347,7 @@ a {
     font-weight: 500;
     font-size: 1.4rem;
     line-height: 1.5;
-    color: #A3A6AB;
+    color: #a3a6ab;
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
@@ -374,7 +374,7 @@ a {
     font-weight: 500;
     font-size: 1.4rem;
     letter-spacing: 0.01em;
-    color: #4D4D52;
+    color: #4d4d52;
 }
 
 /* ======== stats ======== */
@@ -392,7 +392,7 @@ a {
     display: flex;
 }
 
-.stats .img-block, 
+.stats .img-block,
 .stats .info {
     width: 50%;
 }
@@ -412,7 +412,7 @@ a {
     width: 239px;
     padding: 45px 22px 40px;
     border-radius: 0px 0px 12px 12px;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
 }
 
 .stats-trend .value {
@@ -431,13 +431,13 @@ a {
     font-weight: 400;
     font-size: 1.2rem;
     line-height: 1.5;
-    color: #A7A7A7;
+    color: #a7a7a7;
 }
 
 .stats-trend .separate {
     height: 1.2px;
     margin-top: 25px;
-    background: #E9E9E9;
+    background: #e9e9e9;
 }
 
 .stats .avatar-block {
@@ -509,7 +509,7 @@ a {
     font-weight: 400;
     font-size: 1.6rem;
     line-height: 1.88;
-    color: #5A6473;
+    color: #5a6473;
 }
 
 .stats .row-qty {
@@ -555,7 +555,7 @@ a {
     font-weight: 600;
     font-size: 3.5rem;
     line-height: 1.5;
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 .subscription .desc {
@@ -563,14 +563,14 @@ a {
     font-weight: 400;
     font-size: 1.6rem;
     line-height: 1.88;
-    color: #FFFFFF;
+    color: #ffffff;
     opacity: 0.75;
 }
 
 .subscription .btn {
     margin-top: 20px;
     min-width: 151px;
-    background: #FFFFFF;
+    background: #ffffff;
     color: #002366;
 }
 
@@ -596,11 +596,11 @@ a {
 }
 
 .footer .heading {
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 2rem;
-    color: #1C1C1D;
+    color: #1c1c1d;
 }
 
 .footer .list,
@@ -616,7 +616,7 @@ a {
 .footer .desc {
     font-weight: 400;
     font-size: 1.6rem;
-    color: #7A7A7E;
+    color: #7a7a7e;
     white-space: nowrap;
 }
 
@@ -661,5 +661,3 @@ a {
     font-size: 1.4rem;
     color: #c2c2c2;
 }
-
-
